--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
 carpentry: "swc"
+baseurl: /cgeroux/git-collaboration/
 
 # Overall title for pages.
 title: "Git Collaboration"
